Add in location tagging
TODO: Set up mini relational db so we don't need to store a billion
locations, just the ID on each one

--- a/roadtrip/index.html
+++ b/roadtrip/index.html
@@ -6,6 +6,8 @@
     <link href="https://fonts.googleapis.com/css?family=Mukta" rel="stylesheet">
   </head>
   <body>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDY-HfeAAaeqRYsu4qQPYxhnYM4XUKb6m4&libraries=places"
+         async defer></script>
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
