--- a/roadtrip/index.html
+++ b/roadtrip/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Theron's 2017 Cross Country Extravaganza</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Mukta" rel="stylesheet">
   </head>
   <body>
