--- a/roadtrip/index.html
+++ b/roadtrip/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-122682030-2"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-122682030-2');
+    </script>
     <meta charset="utf-8">
     <title>Theron's 2017 Cross Country Extravaganza</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -16,16 +24,5 @@
     crossorigin="anonymous"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/tween.js@16.3.4"></script>
-
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-      ga('create', 'UA-39385912-1', 'auto');
-      ga('send', 'pageview');
-
-    </script>
   </body>
 </html>
