--- a/roadtrip/index.html
+++ b/roadtrip/index.html
@@ -1,27 +1,36 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-122682030-2"></script>
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-122682030-2"
+    ></script>
     <script>
       window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
 
-      gtag('config', 'UA-122682030-2');
+      gtag("config", "UA-122682030-2");
     </script>
-    <meta charset="utf-8">
-    <title>Theron's 2017 Cross Country Extravaganza</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://fonts.googleapis.com/css?family=Mukta" rel="stylesheet">
+    <meta charset="utf-8" />
+    <title>Theron's 2017 Cross Country Extravaganza test2</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Mukta"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
 
     <script
-    src="https://code.jquery.com/jquery-3.2.1.min.js"
-    integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
-    crossorigin="anonymous"></script>
+      src="https://code.jquery.com/jquery-3.2.1.min.js"
+      integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+      crossorigin="anonymous"
+    ></script>
 
     <script src="https://cdn.jsdelivr.net/npm/tween.js@16.3.4"></script>
   </body>
