--- a/roadtrip/index.html
+++ b/roadtrip/index.html
@@ -15,7 +15,7 @@
       gtag("config", "UA-122682030-2");
     </script>
     <meta charset="utf-8" />
-    <title>Theron's 2017 Cross Country Extravaganza test2</title>
+    <title>Theron's 2017 Cross Country Extravaganza</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
       href="https://fonts.googleapis.com/css?family=Mukta"
