bunch of build shit

--- a/roadtrip/index.html
+++ b/roadtrip/index.html
@@ -24,7 +24,6 @@
   </head>
   <body>
     <div id="app"></div>
-    <!-- built files will be auto injected -->
 
     <script
       src="https://code.jquery.com/jquery-3.2.1.min.js"
@@ -33,5 +32,7 @@
     ></script>
 
     <script src="https://cdn.jsdelivr.net/npm/tween.js@16.3.4"></script>
+
+    <script type="module" src="/src/main.js"></script>
   </body>
 </html>
